--- a/src/templates/input_data.html
+++ b/src/templates/input_data.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <form method="post" action="/input" enctype="multipart/form-data">
-    <input type="file" name="csv">
+    <input type="file" name="csv" accept=".csv">
     <input type="number" name="max_pass">
     <button type="submit">Go!</button>
 </form>
