--- a/src/templates/input_data.html
+++ b/src/templates/input_data.html
@@ -3,8 +3,8 @@
 {% block content %}
 <form method="post" action="/input" enctype="multipart/form-data">
     <div>
-    <label for="csv">CSV with header row: </label>
-    <input type="file" name="csv" id="csv" accept=".csv">
+    <label for="csv">CSV with header row or Tribunal save file: </label>
+    <input type="file" name="csv" id="csv" accept=".csv, .trib">
     </div>
     <div>
     <label for="max_pass">Maximum number of results to accept (or leave blank):</label>
