--- a/src/templates/input_data.html
+++ b/src/templates/input_data.html
@@ -7,7 +7,7 @@
     <input type="file" name="csv" id="csv" accept=".csv, .trib">
     </div>
     <div>
-    <label for="max_pass">Maximum number of results to accept (or leave blank):</label>
+    <label for="max_pass">Maximum number of results to accept (or leave blank to potentially accept all):</label>
     <input type="number" id"max_pass" name="max_pass">
     </div>
     <div>
