--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -10,6 +10,6 @@
         <link rel="stylesheet" href="{{ url_for("static", filename="style.css")}} ">
     </head>
     <body>
-        {% block content %}{% endblock %}
+        {%- block content %}{% endblock -%}
     </body>
 </html>
