--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -2,12 +2,13 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-        <title>Ranker</title>
+        <title>Tribunal</title>
+        <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-        <link rel="stylesheet" href="{{ url_for("static", filename="style.css")}} ">
+        <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }} ">
     </head>
     <body>
         {%- block content %}{% endblock -%}
