--- a/src/templates/input_data.html
+++ b/src/templates/input_data.html
@@ -4,7 +4,7 @@
 <form method="post" action="/input" enctype="multipart/form-data">
     <div>
     <label for="csv">CSV with header row or Tribunal save file: </label>
-    <input type="file" name="csv" id="csv" accept=".csv, .trib">
+    <input type="file" name="csv" id="csv" accept=".csv, .trib" required>
     </div>
     <div>
     <label for="max_pass">Maximum number of results to accept (or leave blank to potentially accept all):</label>
